<resources>

    <string name="app_name">Attendance Monitor</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Work Diary</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a Registered? Register Here!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please Enter Your Registered Email Address</string>
    <string name="title_activity_report">Map work Summary</string>
    <string name="map_work_record">Please Enter Work Summary</string>
    <string name="google_maps_key" translatable="false">AIzaSyACcX7DFTyuhi7wqI7tgEZArxGm50sE6O4</string>
    <string name="tag">Please enter login details to start using this app</string>
    <string name="register">Register</string>
    <string name="tag_reg">Enter your correct details to start using this app</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password_confirm">Confirm Password</string>

</resources>
